fix消息